<resources>
    <string name="app_name">Coffee App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="payment_string">Payment is the transfer of money, goods, or services in exchange for goods and services in acceptable proportions that have been previously agreed upon by all parties involved. A payment</string>
<string name="deliver">Deliver to</string>
    <string name="home">Home</string>
    <string name="location">Abbas El-Akkad, Al Manteqah Al Oula, Nasr City</string>
    <string name="office">My Office</string>
    <string name="apartment">My Apartment</string>
    <string name="house">Parents House</string>
    <string name="company">My company</string>
    <string name="villa">My villa</string>
    <string name="apply">Apply</string>
    <string name="image">Location</string>
    <string name="OrderFor">Order For Coffee</string>
    <string name="first">Sometimes I stay up so late that I have my morning coffee before I go to bed. Good communication is as stimulating as black coffee, and just as hard to sleep after. Coffee is the best thing to douse the sunrise with.</string>
    <string name="cairo">Cairo, Egypt</string>
    <string name="good_morning">Good morning, Sir</string>
    <string name="categories">Categories</string>
    <string name="cappuccino">Cappuccino</string>
    <string name="latte">Latte</string>
    <string name="espresso">Espresso</string>
    <string name="login">Login </string>
    <string name="email">Email Address</string>
    <string name="pass">Password</string>
    <string name="fpass">Forgot Password ?</string>
    <string name="dont_have_account">Don\'t have an account ?</string>
    <string name="signup">Sign Up</string>
    <string name="or">OR</string>
    <string name="facebook">Sign In with Facebook</string>
    <string name="google">Sign In with Google</string>
    <string name="choco">100</string>
    <string name="board">Coffee ☕ | Chocolate 🍫 | Medium Roasted</string>
    <string name="size">Coffee Size</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="zero">0 Cubes</string>
    <string name="one">1 Cube</string>
    <string name="two">2 Cubes</string>
    <string name="three">3 Cubes</string>
    <string name="price">Add To Cart | 50 $</string>
    <string name="sugar">Sugar Amount</string>
    <string name="star">⭐ 4.9</string>
    <string name="summary">Order Summary</string>
    <string name="order">Order</string>
    <string name="dollar_sign">$</string>
    <string name="easy_payment">Easy Payment</string>
    <string name="cpass">Confirm Password</string>
    <string name="fast_delivery">Fast Delivery</string>
    <string name="delivery">Sometimes I stay up so late that I have my morning coffee before I go to bed.Good communication is as stimulating as black coffee, and just as hard to sleep after.Coffee is the best thing to douse the sunrise with.</string>
    <string name="faild_to_login">Faild to login</string>
    <string name="profile">Profile</string>
    <string name="personal_data">Personal Data</string>
    <string name="settings">Settings</string>
    <string name="stat">E-Statement</string>
    <string name="code">Refferal Code</string>
    <string name="faq">FAQs</string>
    <string name="handbook">Our Handbook</string>
    <string name="logout">Logout</string>
    <string name="log_in">Log in</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="name">Name</string>
</resources>