<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fargment.MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcv_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_coffee_pic"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                android:src="@drawable/cappuccino" />

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="2sp"
            android:orientation="vertical"
            android:background="#41F7EAE4"
            app:layout_constraintBottom_toBottomOf="@id/mcv_image"
            app:layout_constraintStart_toStartOf="@id/mcv_image">

            <TextView
                android:id="@+id/cafe_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:elevation="2sp"
                android:text="@string/cappuccino"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/mcv_image"
                app:layout_constraintStart_toStartOf="@id/mcv_image" />

            <TextView
                android:id="@+id/tv_coffee_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               android:padding="10dp"
                android:paddingBottom="10dp"
                android:elevation="2sp"
                android:textStyle="bold"
                android:text="@string/choco"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/mcv_image"
                app:layout_constraintStart_toStartOf="@id/mcv_image" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/textButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:backgroundTint="#6E5A4B"
            android:clickable="false"
            android:elevation="2sp"
            android:text="@string/star"
            android:textColor="@color/white"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="@id/mcv_image"
            app:layout_constraintEnd_toEndOf="@id/mcv_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mcv_image">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:layout_width="370dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:backgroundTint="@color/silver"
                    android:clickable="false"
                    android:text="@string/board"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    app:cornerRadius="20dp" />


                <TextView
                    android:id="@+id/CoffeeSize"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:text="@string/size"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:background="@drawable/radio_selector"
                        android:button="@color/white"
                        android:elevation="5dp"
                        android:padding="15dp"
                        android:text="@string/small"
                        android:textColor="@drawable/text_color" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:background="@drawable/radio_selector"
                        android:button="@color/white"
                        android:elevation="5dp"
                        android:padding="15dp"
                        android:text="@string/medium"
                        android:textColor="@drawable/text_color" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:background="@drawable/radio_selector"
                        android:button="@color/white"
                        android:elevation="5dp"
                        android:padding="15dp"
                        android:text="@string/large"
                        android:textColor="@drawable/text_color" />
                </RadioGroup>

                <TextView
                    android:id="@+id/Sugar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:text="@string/sugar"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="7dp"
                        android:background="@drawable/radio_selector"
                        android:button="@color/white"
                        android:elevation="5dp"
                        android:padding="15dp"
                        android:text="@string/zero"
                        android:textColor="@drawable/text_color" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="7dp"
                        android:background="@drawable/radio_selector"
                        android:button="@color/white"
                        android:elevation="5dp"
                        android:padding="15dp"
                        android:text="@string/one"
                        android:textColor="@drawable/text_color" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="7dp"
                        android:background="@drawable/radio_selector"
                        android:button="@color/white"
                        android:elevation="5dp"
                        android:padding="15dp"
                        android:text="@string/two"
                        android:textColor="@drawable/text_color" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="7dp"
                        android:background="@drawable/radio_selector"
                        android:button="@color/white"
                        android:elevation="5dp"
                        android:padding="15dp"
                        android:text="@string/three"
                        android:textColor="@drawable/text_color" />
                </RadioGroup>


                <TextView
                    android:id="@+id/cups"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:text="Cups Number"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/btn_down"
                        android:layout_marginEnd="10dp"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_baseline_arrow_circle_down_24" />

                    <TextView
                        android:id="@+id/total_cups"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="25sp"/>
                    <ImageView
                        android:id="@+id/btn_up"
                        android:layout_marginStart="10dp"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_baseline_arrow_circle_up_24"/>

                </LinearLayout>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_add_to_cart"
                    android:layout_width="370dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:layout_margin="40dp"
                    android:backgroundTint="@color/brown"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/add_to_cart"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:cornerRadius="20dp" />
            </LinearLayout>


        </LinearLayout>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/white"
            android:src="@drawable/back"
            app:fabSize="mini"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>